--- a/styles.css
+++ b/styles.css
@@ -86,20 +86,18 @@ body.light-mode nav img {
 }
 
 nav img:hover {
-    filter: invert(0); /* Invert to black if previously white */
     filter: drop-shadow(0 0 8px var(--shadow-color)); /* Add light shadow in dark mode */
 }
 
 body.light-mode nav img:hover {
-    filter: invert(1); /* Ensure icons turn white when hovered in light mode */
     filter: drop-shadow(0 0 8px var(--shadow-color)); /* Add dark shadow in light mode */
 }
 
 /* Active Navigation Item */
 nav a.active img {
     transform: scale(1.2);
+    filter: invert(0);
     filter: drop-shadow(0 0 24px var(--shadow-color)); /* Highlight shadow for active item */
-    filter: invert(1); /* Make the selected icon white in dark mode */
 }
 
 body.light-mode nav a.active img {
